# ChangeLog for sys-devel/distcc
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/distcc/ChangeLog,v 1.164 2007/04/26 07:33:42 dberkholz Exp $

  26 Apr 2007; Donnie Berkholz <dberkholz@gentoo.org>; metadata.xml:
  Update for cluster herd split to hp-cluster and ha-cluster.

  26 Mar 2007; Alec Warner <antarus@gentoo.org> distcc-2.18.3-r10.ebuild:
  Remove dependency on portage: ref bug 162516

  04 Mar 2007; Lisa Seelye <lisa@gentoo.org> -distcc-2.16-r2.ebuild,
  -distcc-2.16-r3.ebuild, -distcc-2.18.3-r6.ebuild,
  -distcc-2.18.3-r7.ebuild, -distcc-2.18.3-r8.ebuild:
  Now trying to remove old files!

  04 Mar 2007; Lisa Seelye <lisa@gentoo.org> -files/2.17/conf,
  -files/2.17/init:
  Prune old versions and old PATCHLEVEL dirs in files that shouldnt be there.

  05 Jan 2007; Diego Pettenò <flameeyes@gentoo.org> distcc-2.16-r2.ebuild,
  distcc-2.16-r3.ebuild, distcc-2.18.3-r6.ebuild, distcc-2.18.3-r7.ebuild,
  distcc-2.18.3-r8.ebuild, distcc-2.18.3-r10.ebuild:
  Remove gnuconfig_update usage, leave it to econf.

  17 Nov 2006; Diego Pettenò <flameeyes@gentoo.org>
  distcc-2.18.3-r10.ebuild:
  Add ~sparc-fbsd keyword.

  14 Aug 2006; Christian Heim <phreak@gentoo.org> distcc-2.16-r2.ebuild,
  distcc-2.16-r3.ebuild, distcc-2.18.3-r6.ebuild, distcc-2.18.3-r7.ebuild,
  distcc-2.18.3-r8.ebuild, distcc-2.18.3-r10.ebuild:
  Switch default ordering of gcc-config and eselect-compiler to work around
  portage bug.

  06 Jun 2006; Jeremy Huddleston <eradicator@gentoo.org>
  distcc-2.16-r2.ebuild, distcc-2.16-r3.ebuild, distcc-2.18.3-r6.ebuild,
  distcc-2.18.3-r7.ebuild, distcc-2.18.3-r8.ebuild,
  distcc-2.18.3-r10.ebuild:
  Updated DEPEND to accept eselect-compiler.

  02 May 2006; Diego Pettenò <flameeyes@gentoo.org>
  distcc-2.18.3-r10.ebuild:
  Fix up dependencies and checks for non-GNU userlands (where shadow is not
  used) and mark ~x86-fbsd.
