@@ -31,14 +31,14 @@ MD5 687a622f11f457581b267ce5fb3c2721 files/distcc-gentoo-multilib.patch 3784
 RMD160 f48a3f2f8c82379c30c9da0e49aa66ba34681882 files/distcc-gentoo-multilib.patch 3784
 SHA256 d3af7a7592d0a11a35d294022b36feca2fb625e4799513bf56a79e0656278403 files/distcc-gentoo-multilib.patch 3784
 DIST distcc-2.18.3.tar.bz2 341601 RMD160 c7ac6f3e161dccf39b841b57a3328b4208d28c2d SHA1 88e4c15826bdbc5a3de0f7c1bcb429e558c6976d SHA256 6500f1bc2a30b1f044ebed79c6ce15457d1712263e65f0db7d6046af262ba434
-EBUILD distcc-2.18.3-r10.ebuild 5176 RMD160 9afa34216d6bf88f97c165c04f09d203506764b3 SHA1 2d92a71206a90279458e3db33293eb0a4ccf58f2 SHA256 1a4cf94a881e890ffb8ccff6cad0769636a22d94ad08cd3b85076bb12fa1db5f
-MD5 380fcbfc9655332dd817795a7d572d53 distcc-2.18.3-r10.ebuild 5176
-RMD160 9afa34216d6bf88f97c165c04f09d203506764b3 distcc-2.18.3-r10.ebuild 5176
-SHA256 1a4cf94a881e890ffb8ccff6cad0769636a22d94ad08cd3b85076bb12fa1db5f distcc-2.18.3-r10.ebuild 5176
-MISC ChangeLog 29911 RMD160 526f9b0ccad92430c538ca6b9859ca8c0f556de2 SHA1 0618bb3f3b3ee6352fba28a6bdb75f1bad122908 SHA256 2a5f3ccb14c337db5364bddb7670dd05bccb7084d9feee2828e12184d3fe67fa
-MD5 25a28882e56bf3458197cd5fd86dd3bf ChangeLog 29911
-RMD160 526f9b0ccad92430c538ca6b9859ca8c0f556de2 ChangeLog 29911
-SHA256 2a5f3ccb14c337db5364bddb7670dd05bccb7084d9feee2828e12184d3fe67fa ChangeLog 29911
+EBUILD distcc-2.18.3-r10.ebuild 5139 RMD160 79ae291e66bf414f8b7a7eb87333fbb17bb2542a SHA1 492989c668dee04b1724b291ed7c05024083c225 SHA256 c3d9f9b4bc50e6fa18eef8e04c551e8da5635547ca72ffe334a698f9b85d7ead
+MD5 5ce755d4bff73ab0a8c892ac729e5ed6 distcc-2.18.3-r10.ebuild 5139
+RMD160 79ae291e66bf414f8b7a7eb87333fbb17bb2542a distcc-2.18.3-r10.ebuild 5139
+SHA256 c3d9f9b4bc50e6fa18eef8e04c551e8da5635547ca72ffe334a698f9b85d7ead distcc-2.18.3-r10.ebuild 5139
+MISC ChangeLog 30043 RMD160 1414055aba72eb8be1bce1af70f7e959efeb8b19 SHA1 923beb07f3996b10929acafd38837dde37df2591 SHA256 ce7e0a99bf5c567eababf04bf5f5873529ce621cfb637b8b4e281f6f9612193e
+MD5 ab550af1d79257bb8dd2bd577fca4c7a ChangeLog 30043
+RMD160 1414055aba72eb8be1bce1af70f7e959efeb8b19 ChangeLog 30043
+SHA256 ce7e0a99bf5c567eababf04bf5f5873529ce621cfb637b8b4e281f6f9612193e ChangeLog 30043
 MISC metadata.xml 378 RMD160 b6720695318d22555c3d334b87f8a977fa78a37f SHA1 0c28b5784eb8ee6d7d6ef580cd8d85da934bc3b9 SHA256 95b51f4ef296ef75f579b6ebea57f553783a5c7ffa55ce6166d3e60055f1f139
 MD5 116c9c056268262585941bae18725e63 metadata.xml 378
 RMD160 b6720695318d22555c3d334b87f8a977fa78a37f metadata.xml 378
